# local-asr-service

./: .env.example  .gitignore  AGENTS.md  MODELS.md  README.md  pyproject.toml  tach.toml  transcript.json  transcript.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apple-speech-worker/: Package.swift
apple-speech-worker/Sources/AppleSpeechWorkerContractTests/: main.swift
apple-speech-worker/Sources/AppleSpeechWorkerCore/: LiveAppleSpeechRuntime.swift  WorkerCommands.swift  WorkerModels.swift  WorkerRuntime.swift
apple-speech-worker/Sources/apple-speech-worker/: main.swift
benchmarks/: phase3_evaluation.py  run.py
benchmarks/samples/: README.md
docs/: 20251214-code-reviewing-by-claude.md  ADR-001.md  ADR-002-Lightweight-Local-Speech-Gateway-Boundary.md  ROADMAP.md  SESSION-2026-01-31-SPEC-006-Implementation.md  SESSION-2026-02-01-SPEC-007-Design.md  SPEAKER_DIARIZATION.md  SPEC-001-Interface-And-Schemas.md  SPEC-002-Service-And-Engine.md  SPEC-003-Audio-And-Text-Processing.md  SPEC-004-Testing-Strategy.md  SPEC-005-Speaker-Diarization.md  SPEC-006-Security-And-Quality-Hardening.md  SPEC-007-Speaker-Diarization-FunASR.md  SPEC-008-Dynamic-Model-Switching.md  SPEC-009-Idle-Model-Offload.md  SPEC-010-Dependency-Management-And-Dependabot.md  SPEC-011-Decoupled-ASR-Diarization.md  SPEC-012-Apple-Native-Diarization-Capability-Probe.md  SPEC-013-Production-Decoupled-Diarization-Pipeline.md  SPEC-014-Apple-SpeechAnalyzer-Integration.md  SPEC-014-Architecture-Fitness-Harness.md  SPEC-015-Architecture-Fitness-Harness.md
docs/fixtures/: apple-speech-transcribe-en-US.json
docs/plans/: 2026-03-08-subprocess-model-isolation-design.md  2026-03-08-subprocess-model-isolation.md
docs/superpowers/: 2026-05-19-qwen3-sortformer-longform-defects.md
docs/superpowers/plans/: 2026-04-30-runtime-aware-asr-pipeline.md  2026-05-17-production-decoupled-diarization-pipeline.md  2026-05-18-spec-013-long-form-productionization.md  2026-05-21-qwen3-sortformer-doc-repositioning.md  2026-07-04-apple-speech-service-integration.md  2026-07-05-apple-speech-phase3-evaluation.md
docs/superpowers/specs/: 2026-05-21-qwen3-sortformer-experimental-repositioning-design.md
examples/: demo_clean_tags.py  demo_diarization.py
scripts/: probe_qwen3_sortformer_longform.py
src/: config.py  main.py
src/adapters/: apple_speech_worker_client.py  audio_chunking.py  pipeline_chunking.py  segment_alignment.py  text.py
src/api/: routes.py
src/core/: alignment_port.py  alignment_registry.py  apple_speech_engine.py  apple_speech_port.py  base_engine.py  diarization_port.py  diarization_registry.py  factory.py  firered_engine.py  funasr_engine.py  mlx_engine.py  mlx_qwen_forced_aligner.py  mlx_sortformer_diarizer.py  model_registry.py  pipeline_registry.py  sortformer_engine.py
src/services/: transcription.py
src/workers/: model_worker.py
tests/e2e/: test_full_flow.py
tests/fixtures/: README.md
tests/integration/: test_api.py  test_model_api.py  test_security_integration.py
tests/reliability/: test_concurrency.py
tests/unit/: test_adapters.py  test_apple_speech_engine.py  test_apple_speech_worker_client.py  test_apple_speech_worker_source_contracts.py  test_architecture_fitness.py  test_audio_chunking.py  test_config_factory.py  test_diarization_port.py  test_diarization_registry.py  test_dynamic_switching.py  test_engine.py  test_firered_engine.py  test_idle_offload.py  test_main.py  test_mlx_engine.py  test_mlx_qwen_forced_aligner.py  test_mlx_sortformer_diarizer.py  test_model_registry.py  test_phase3_evaluation.py  test_pipeline_chunking.py  test_pipeline_registry.py  test_security.py  test_segment_alignment.py  test_service.py  test_service_apple_speech.py  test_sortformer_engine.py  test_worker.py
